--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "framer-motion": "^12.23.12",
-    "icons": "^1.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
